<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AddTask">

    <TextView
        android:id="@+id/textView"
        android:layout_width="156dp"
        android:layout_height="45dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="259dp"
        android:text="@string/add_task"
        android:textSize="34sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="159dp"
        android:ems="10"
        android:hint="please enter title"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <Button
        android:id="@+id/button"
        android:layout_width="186dp"
        android:layout_height="79dp"
        android:layout_marginStart="59dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="167dp"
        android:backgroundTint="#79D5E1"
        android:text="@string/add_taskBtn"
        android:textColor="#0E0E0E"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radioGroupteam" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="157dp"
        android:layout_height="43dp"
        android:layout_marginStart="72dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="183dp"
        android:text="@string/total_tasks_0"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <RadioGroup
        android:id="@+id/radioGroupteam"
        android:layout_width="116dp"
        android:layout_height="147dp"
        android:layout_marginStart="103dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="192dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2">

        <RadioButton
            android:id="@+id/Team1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="team1" />

        <RadioButton
            android:id="@+id/Team2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="team2" />

        <RadioButton
            android:id="@+id/Team3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="team3" />
    </RadioGroup>

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="159dp"
        android:ems="10"
        android:hint="please enter description"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

</androidx.constraintlayout.widget.ConstraintLayout>