...
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsPageActivity">

    <EditText
        android:id="@+id/editTextUserName"
        android:layout_width="233dp"
        android:layout_height="66dp"
        android:ems="10"
        android:hint="@string/username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
...
        app:layout_constraintHorizontal_bias="0.325"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.135" />

    <Button
        android:id="@+id/SaveButtonSettingsPage"
        android:layout_width="125dp"
        android:layout_height="63dp"
        android:backgroundTint="#29A4D5"
        android:text="@string/save"
        android:textColor="#151414"
        app:layout_constraintBottom_toBottomOf="parent"
...
